# fastapi_sqlalchemy_template

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  PERFORMANCE.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: a91813720fc4_init.py
api/routes/: __init__.py  healtcheck.py  users.py
app/: __init__.py
app/api/: __init__.py  health.py  router.py
app/core/: __init__.py  app.py  context.py  dependencies.py  logging.py  timezone.py  version.py
app/core/config/: __init__.py  base.py  dev.py  prod.py
app/db/: __init__.py  base.py  session.py
app/domains/: __init__.py
app/domains/users/: __init__.py  models.py  repository.py  routes.py  schemas.py  service.py
app/infra/: __init__.py
app/infra/metrics/: __init__.py  opentelemetry.py
app/infra/tasks/: __init__.py
core/: app.py  config.py  logging.py
db/: base.py  session.py
db/models/: User.py  __init__.py
docs/: observability.md
docs/en/: versioning.md
docs/es/: versioning.md
schemas/: user.py
services/: __init__.py  users.py
tests/fixtures/: client.py  db.py
tests/integration/: test_error_handling.py  test_users.py
tests/unit/: test_context.py  test_health.py  test_logging.py  test_observability.py
util/: timezone.py
