[project]
name = "fastapi-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.0",
    "greenlet>=3.2.4",
    "loguru>=0.7.2",
    "email-validator>=2.1.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "pydantic[email]>=2.12.4",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[tool.pyright]
extraPaths = ["."]
reportMissingImports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
