[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fastapi-template"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.1",
    "asyncpg>=0.30.0",
    "fastapi>=0.121.0",
    "greenlet>=3.2.4",
    "loguru>=0.7.2",
    "email-validator>=2.1.1",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
    "pydantic[email]>=2.12.4",
    "httpx>=0.28.1",
    "opentelemetry-api>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "opentelemetry-sdk>=1.38.0",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.59b0",
    "opentelemetry-instrumentation-httpx>=0.59b0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
]

[tool.pyright]
extraPaths = ["."]
reportMissingImports = true

[tool.pytest.ini_options]
addopts = "--asyncio-mode=auto -q"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "hatch>=1.15.1",
    "hatch-vcs>=0.5.0",
    "hatchling>=1.27.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=5.0.0",
]

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
omit = [
    "*/__init__.py",
    "app/infra/metrics/*",
    "app/core/logging.py",
    "main.py",
    "app/_version.py",
]
fail_under = 80

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "app/_version.py"

[tool.hatch.build.targets.sdist]
include = ["app", "main.py", "pyproject.toml", "README.md"]
exclude = ["alembic"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
only-include = ["app"]
